feat: update index.html

--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
         <details>
           <summary>Internship as a html coder</summary>
           <figure>
-            <p><img src="/kinohod-1.jpg" alt=""></p>
+            <p><img src="kinohod-1.jpg" alt=""></p>
             <figcaption>Layout for Kinohod (VTB loyalty program)</figcaption>
            </figure>
            <figure>
-            <p><img src="/kinohod-2.jpg" alt=""></p>
+            <p><img src="kinohod-2.jpg" alt=""></p>
             <figcaption>Seat selection (VTB loyalty program)</figcaption>
            </figure>
          </details>
@@ -104,7 +104,7 @@
         <div class="footer__wrapper">
           <div class="footer__github">
             <a href="https://github.com/perloten" target="_blank">
-              <img src="/GitHub_Logo_White.png" alt="Github Perloten account">
+              <img src="GitHub_Logo_White.png" alt="Github Perloten account">
             </a>
           </div>       
           <div class="footer__year">
