--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <h2 class="title">Code Example</h2>
         <details>
           <summary>Codewars solution)</summary>
-          <code><pre>
+          <code>
             class Shark extends Animal {
               constructor(name, age, status, legs, species) {
                 super(name, age, status);
@@ -64,7 +64,6 @@
                 this.species = 'shark';
               }
             }
-          </pre>
           </code>
          </details>
         
@@ -108,7 +107,7 @@
             </a>
           </div>       
           <div class="footer__year">
-            <script type="text/javascript">dt = new Date();document.write(dt.getFullYear());</script>
+            <script>dt = new Date();document.write(dt.getFullYear());</script>
           </div>
           <div class="footer__logo-rs" onclick="document.location.href = 'https://rs.school/js/';"></div>
           </div>
